@@ -1,5 +1,7 @@
 version 9.0.
 date: dd/mm/yyyy
+  * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
+    fixing an issue with Chinese text
   * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
   * added the passing of remote credentials to the skosDiffing tools
   * added the automatic opening of desired projects at startup
